--- a/Projetos/humores-nicolas-cage/style.css
+++ b/Projetos/humores-nicolas-cage/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko&family=Zen+Tokyo+Zoo&display=swap');
-@import url('http://fonts.cdnfonts.com/css/bernier-distressed');
+@font-face {
+   font-family: "BERNIER Distressed";
+   src: url('BERNIER Distressed.ttf');
+}
 
 * {
     margin: 0;
