--- a/Projetos/portfolio/templates/index.html
+++ b/Projetos/portfolio/templates/index.html
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="container">
-                    <a href="encurtador.com.br/alxDU" target="_blank">
+                    <a href="https://encurtador.com.br/alxDU" target="_blank">
                         <img src="../static/img/5-ficcao.jpg">
                         <div class="legenda">
                             <span>FICÇÃO INTERATIVA</span>
@@ -124,8 +124,8 @@
                     </a>
                 </div>
                 <div class="container">
-                    <a href="https://encurtador.com.br/kqtBK" target="_blank">
-                        <img src="../static/img/2-jokenpo.jpeg">
+                    <a href="https://felipemenezes-portfolio.vercel.app/" target="_blank">
+                        <img src="../static/img/7-portfolio.png">
                         <div class="legenda">
                             <span>PORTFOLIO</span>
                         </div>
